<resources>
    <string name="app_name">MeuApe</string>
    <string name="home_start">Começar</string>
    <string name="home_instructions">Instruções</string>
    <string name="home_credtis">Créditos</string>
    <string name="intro_warning">Se você não responder todas as perguntas, seus dados não\n poderão ser utilizados na
        pesquisa.
    </string>
    <string name="intro_ok">OK</string>
    <string name="info_title">O que é esta pesquisa?</string>
    <string name="info_content"><![CDATA[
       Este ambiente digital foi elaborado com o intuito de avaliar COMO VOCÊ MORA de forma mais lúdica e interativa.
       Pretendemos através dessa ferramenta digital, compreender questões relativas ao seu modo de vida e maneira de morar nas diversas escalas de sua moradia: desde o bairro até sua casa.
       As informações coletadas irão compor um banco de dados sobre o morar comtemporâneo, alimentando novos projetos e ações ruma à elevação da qualidade das moradias em nossas cidades.
]]></string>
    <string name="terms_title">Termo de consentimento livre e esclarecido</string>
    <string name="terms_agree">Concordo</string>
    <string name="terms_diseagree">Não concordo</string>
    <string name="terms_content"><![CDATA["Você está sendo convidado(a) a participar da pesquisa intitulada "..
	"”AVALIAÇÃO PÓS-OCUPAÇÃO FUNCIONAL, COMPORTAMENTAL E AMBIENTAL EM APARTAMENTOS COM INTERFACES DIGITAIS: APRIMORAMENTO DO SOFTWARE, INTERFACE E APLICAÇÃO”, sob a responsabilidade dos pesquisadores Simone Barbosa "..
	"Villa, Maria Adriana Vidigal de Lima, Viviane dos Guimarães Alvim Nunes, Rita de Cássia Pereira Saramago, Sabrina Maia Lemos, Fernando Garrefa, "..
	"Rafaela Nunes Mendonça, Thais Castro Alves de Ávila, Abrão Osório Júnior, Isabella Gomes de Marco, Aline de Souza Lima Abreu e Miguel Henrique de "..
	"Brito Pereira da Faculdade de Arquitetura e Urbanismo e Design (FAUeD) e da Faculdade de Computação (FACOM) da Universidade Federal de Uberlândia (UFU).\n\n"..
	"Este questionário digital foi elaborado com o intuito de avaliar como você mora de forma mais lúdica e interativa. Pretendemos compreender questões "..
	"relativas ao seu modo de vida e maneira de morar nas diversas escalas de sua moradia: desde o bairro até sua casa. As informações coletadas irão compor"..
	" um banco de dados sobre o morar contemporâneo, alimentando novos projetos e ações rumo à elevação da qualidade das moradias em nossas cidades.\n\n"..
	"O Termo de Consentimento Livre e Esclarecido será obtido pelo próprio sistema imediatamente antes da aplicação do questionário digital proposto"..
	" na pesquisa, diretamente no aplicativo. Vale ressaltar que, nesse momento, o entrevistado tem um tempo para decidir se quer participar conf. item "..
	"IV da Resol. CNS 466/12 ou Cap. III da Resol. 510/2016.\n\n"..
	"Na sua participação, você responderá um questionário digital com perguntas relativas à sua satisfação em relação à sua moradia. Em nenhum momento você"..
	" será identificado. Os resultados da pesquisa serão publicados e ainda assim a sua identidade será preservada. Você não terá nenhum gasto nem ganho "..
	"financeiro por participar na pesquisa. \n\n"..
	"Sobre os riscos da pesquisa, os questionários propostos tratam de pesquisas de satisfação em relação à moradia, com perguntas de cunho cotidiano "..
	"doméstico que não apresentam nenhum risco à saúde física e psicológica de seus respondentes e entrevistadores. Na elaboração dos questionários, todos "..
	"os cuidados foram tomados para assegurar a integridade física e psicológica de seus respondentes. O questionário somente será aplicado após o aceite "..
	"do respondente em participar da enquete. Há riscos relacionados à possível identificação dos participantes, sendo que, para evitá-los, o sistema de "..
	"avaliação atribui um código genérico a cada questionário aplicado, de maneira a conservar o anonimato dos respondentes. \n\n"..
	"Os benefícios serão: (i) a proposição de um SISTEMA INTERATIVO DE AVALIAÇÃO PÓS-OCUPAÇÃO EM MEIOS DIGITAIS da qualidade habitacional que possa "..
	"retroalimentar projetos futuros, enfocando aspectos objetivos e subjetivos do morar, bem como diferentes escalas de análise (produto casa, relação "..
	"comportamental dos usuários com a moradia e inserção da habitação no meio urbano; ii) O estabelecimento, a partir das informações coletadas pelo sistema,"..
	" de BANCOS DE DADOS SOBRE O MORAR, contendo informações estatísticas e científicas que poderão ampliar a qualidade dos projetos na área, bem como "..
	"nortear o estabelecimento de políticas públicas, normas e legislações.\n\n"..
	"Você é livre para deixar de participar da pesquisa a qualquer momento sem qualquer prejuízo ou coação.\n"

]]></string>
</resources>
