<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_meuape"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"/>

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="40dp"
                      android:orientation="vertical"
                      android:layout_centerHorizontal="true"
                      android:layout_below="@id/ivLogo">

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btStart"
                    style="@style/HomeButton"
                    android:text="@string/home_start"/>

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btInstructions"
                    style="@style/HomeButton"
                    android:text="@string/home_instructions"/>

            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btCredits"
                    style="@style/HomeButton"
                    android:text="@string/home_credtis"/>


        </LinearLayout>


    </RelativeLayout>
</layout>